Fix overlapping text

--- a/_sass/pages/_start.scss
+++ b/_sass/pages/_start.scss
@@ -2,6 +2,7 @@
   width: 90%;
   max-width: $M;
   margin: 0 auto;
+  margin-top: 50px;
   padding: 2em 0;
 
   p {
